Checked and fixed not responsive clicable elements

--- a/src/containers/Location/Location.module.scss
+++ b/src/containers/Location/Location.module.scss
@@ -15,6 +15,11 @@
             opacity: 0.7;
         }
     }
+    &:focus-within {
+        .recycle-bin {
+            opacity: 0.7;
+        }
+    }
     .recycle-bin {
         position: absolute;
         top: 12px;
